# tinycbor

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeCache.txt  cmake_install.cmake
cmake/samples/: cmake_install.cmake  tinycbor_sample
samples/: CMakeLists.txt  simplereader.c
tools/inc/: json2cbor.h
tools/json2cbor/: json2cbor.c
